# pydantype

./: pyproject.toml
src/pydantype/: converter.py
