[project]
name = "pydantype"
version = "0.1.0"
description = "A library to convert Pydantic models to TypedDict"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "typing-extensions>=4.13.2",
    "protobuf>=5.26.1",
]
authors = [
    {name = "Unclecode", email = "unclecode@kidocode.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
Homepage = "https://github.com/unclecode/pydantype"
[dependency-groups]
dev = [
    "pydantype",
]

[tool.uv.sources]
pydantype = { workspace = true }
